crates/hird-check/tests/snapshots/actors__request_builder_must_take_reply_channel.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
query : Pid<Msg> → Status ! {Await<Status>, Send<Msg>}
error[C0001] 413..416: type mismatch: expected `ReplyTo<c> → Msg ! {r}`, got `Msg`
