crates/hird-check/tests/snapshots/actors__request_returns_reply_type.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
query : Pid<Msg> → Status ! {Await<Status>, Send<Msg>}
