crates/hird-check/tests/snapshots/actors__request_timeout_must_be_int.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
hasty : Pid<Msg> → Status ! {Await<Status>, Send<Msg>}
error[C0001] 449..455: type mismatch: expected `Int`, got `String`
