crates/hird-check/tests/snapshots/actors__request_timeout_override_leaves_row_unchanged.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
patient : Pid<Msg> → Status ! {Await<Status>, Send<Msg>}
