crates/hird-check/tests/snapshots/actors__schedule_arguments_are_typed.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
bad_clock : ∀a. a
bad_delay : ∀a. a
bad_message : ∀a. a
error[C0001] 444..445: type mismatch: expected `Clock`, got `Int`
error[C0001] 533..543: type mismatch: expected `Msg`, got `Status`
error[C0001] 627..634: type mismatch: expected `Int`, got `String`
