crates/hird-check/tests/snapshots/actors__schedule_rejects_call_constructor.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
later : ∀a. a
error[C0043] 476..479: `Get` carries a reply channel; it can only be used as the message builder of `request`
