crates/hird-check/tests/snapshots/actors__send_effect_must_be_declared.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
poke : Pid<Msg> → () ! {Send<Msg>}
error[C0030] 331..344: declared {} but body performs {Send<Msg>}
