crates/hird-check/tests/snapshots/actors__send_message_type_mismatch_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
poke : ∀a. a
error[C0001] 414..424: type mismatch: expected `Msg`, got `Status`
