crates/hird-check/tests/snapshots/actors__send_to_reply_channel_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
answer : ∀a. a
error[C0001] 392..393: type mismatch: expected `Pid<b>`, got `ReplyTo<Status>`
